app/assets/css/index.css
@import "hack";
@import "bloggify-icons/lib/bloggify-icons.css";

body {
    background: #ecf0f1;
    font-family: "Monaco", monospace;
    color: #444;
}

img {
    width: 30%;
    max-width: 100%;
}

section {
    height: 100vh;
    position: relative;
}

.box {
    font-size: 14px;
    width: auto;
    margin: 0 auto;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 1px solid #e2e2e2;
    padding: 20px;
    background: #fff;
    box-shadow: 0 7px 110px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    line-height: 25px;
    &, & strong {
        font-family: serif;
    }
    & .date {
        text-align: right;
        width: 50px;
    }
    & .table-row > div {
        display: inline-block;
    }
    & .month-name {
        font-size: 16px;
    }
    & .table {
        margin-bottom: 20px;
    }
}

a {
    color: #222;
}

hr {
    border-top: 1px solid #111;
}

.result-for-city {
    text-align: center;
    font-family: sans-serif;
    & > h1 {
        font-size: 3em;
    }
}

.mg-auto {
    margin: 0 auto;
    display: block;
}

.text-center {
    text-align: center;
}

.footer-icon {
    bottom: -80px;
    position: relative;
    font-size: 3em;
    color: #444;
    text-decoration: none;
    border: none;
    &:hover {
        background-color: transparent !important;
        color: #555;
    }
}

input, button {
    font-family: monospace;
}

